# gideon

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  ROADMAP.md
.claude/agents/: kobo-libra-colour-auditor.md  reader-guardian.md  self-healing-advocate.md  sync-architect.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  post-merge.yml  release.yml
ci/: installer_test.sh  make_fixture.py  qemu_integration.sh
crates/gideon-aidoku/: Cargo.toml
crates/gideon-aidoku/src/: lib.rs  settings.rs  util.rs
crates/gideon-aidoku/src/source/: mod.rs  source_settings.rs
crates/gideon-aidoku/src/source/wasm_imports/: json.rs  net.rs  std.rs
crates/gideon-aidoku/src/source/wasm_imports/next/: std.rs
crates/gideon-aidoku/tests/: smoke.rs
crates/gideon-aidoku/wasm_macros/: Cargo.toml
crates/gideon-aidoku/wasm_shared/: Cargo.toml
crates/gideon-app/: Cargo.toml
crates/gideon-app/src/: main.rs  mal.rs  manga.rs  reader.rs
crates/gideon-app/src/ui/: gateway.rs  layout.rs  mod.rs  tests.rs
crates/gideon-app/tests/: online.rs
crates/gideon-core/: Cargo.toml
crates/gideon-core/src/: cbz.rs  comicinfo.rs  error.rs  lib.rs  library.rs  natsort.rs  series.rs  settings.rs
crates/gideon-device/: Cargo.toml
crates/gideon-device/src/: input.rs  kobo.rs  kobo_input.rs  lib.rs  light.rs  network.rs  power.rs
crates/gideon-render/: Cargo.toml
crates/gideon-render/src/: lib.rs  shelf.rs  text.rs
crates/gideon-sources/: Cargo.toml
crates/gideon-sources/src/: download.rs  fetch.rs  lib.rs  list.rs  storage.rs  update.rs
crates/gideon-sources/tests/: update_http.rs
crates/gideon-sync/: Cargo.toml
crates/gideon-sync/src/: lib.rs
docs/: BRANCH_PROTECTION.md  KOREADER_LESSONS.md  LESSONS.md  SYNC.md
installer/: INSTALL.md  gideon-launch.sh  install.sh  nickelmenu-gideon
scripts/: auto_version.sh  release.sh
supabase/migrations/: 0001_reading_progress.sql
