[package]
name = "gideon-app"
description = "gideon: a manga e-reader for Kobo devices"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gideon"
path = "src/main.rs"

[features]
# Build with the Kobo e-ink framebuffer backend.
kobo = ["gideon-device/kobo"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
url.workspace = true
gideon-core = { path = "../gideon-core" }
gideon-render = { path = "../gideon-render" }
gideon-sources = { path = "../gideon-sources" }
gideon-device = { path = "../gideon-device" }
gideon-aidoku = { path = "../gideon-aidoku" }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "rustls-tls-webpki-roots"] }
zip.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
filetime = "0.2"
