[package]
name = "gideon-core"
description = "Document model, CBZ parsing and library management for gideon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
image.workspace = true
quick-xml.workspace = true

[dev-dependencies]
tempfile.workspace = true
