[package]
name = "gideon-device"
description = "Display and input abstraction for gideon, with a Kobo e-ink framebuffer backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enables the Kobo framebuffer backend (Linux mxcfb e-ink ioctls).
kobo = ["dep:libc", "dep:memmap2"]

[dependencies]
thiserror.workspace = true
gideon-render = { path = "../gideon-render" }
libc = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
