[package]
name = "gideon-sources"
description = "Aidoku/bobo-compatible manga source list management for gideon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
ureq.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
