[package]
name = "gideon-sources"
description = "Aidoku/bobo-compatible manga source list management for gideon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
ureq.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.7"
webpki-roots = "0.26"
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
filetime = "0.2"
