[package]
name = "gideon-aidoku-wasm-macros"
description = "Proc macros for the gideon-aidoku WASM source runtime (vendored from bobo-koreader's wasm_macros)"
version.workspace = true
edition.workspace = true
repository.workspace = true
license = "AGPL-3.0-only"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
